# pet-companion

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: settings.json
.claude/agents/: docs-sync.md  tauri-reviewer.md  test-coverage.md
.claude/commands/: cycle.md  journal.md  plan.md  review.md  ui-check.md
.claude/hooks/: suggest-next.sh
docs/: STRATEGY.md
docs/diagrams/: cycle-state-machine-light.html  cycle-state-machine.html  generate-cycle-state-machine-html.mjs
docs/superpowers/specs/: 2026-05-17-card-visibility-ux-design.md  2026-05-19-pet-state-row-mapping-design.md
scripts/: dev-run.sh  install.command  install.sh  post-build.sh  release.sh
src/: App.css  App.tsx  expand.test.ts  expand.ts  state.test.ts  state.ts  types.ts  typing.test.ts  typing.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: icon.rs  lib.rs  main.rs  timer.rs
