[package]
name = "claude-pet-companion"
version = "0.1.48"
description = "Menu bar desktop pet that follows Claude Desktop and Codex Desktop sessions"
authors = ["carter.p"]
edition = "2021"

[lib]
name = "claude_pet_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
notify = "8"
time = { version = "0.3", features = ["parsing"] }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
